--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "description": "A starter kit for setting up a JavaScript project with Jest tests",
     "main": "index.js",
     "scripts": {
-        "test": "jest --coverage"
+        "test": "jest --coverage",
+        "start": "live-server"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.5",
+        "@babel/core": "^7.20.7",
         "@babel/preset-env": "^7.20.2",
         "babel-jest": "^29.3.1",
         "jest": "^29.3.1"
+    },
+    "dependencies": {
+        "live-server": "^1.2.2"
     }
 }
